--- a/Hff.Entities/Hff.Entities.csproj
+++ b/Hff.Entities/Hff.Entities.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Hff.Core\Hff.Core.csproj" />
+  </ItemGroup>
+
 </Project>
